--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>木子雨彐</title>
 
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -132,9 +132,9 @@
   </g>
 </svg>
 
-<script src='js/TweenMax.min.js'></script>
+<script src='TweenMax.min.js'></script>
 
-<script src="js/script.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
